--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -104,8 +104,11 @@ RoamRssiDiff=5
 # To enable, set gRoamIntraBand=1 (Roaming within band)
 # To disable, set gRoamIntraBand=0 (Roaming across band)
 gRoamIntraBand=0
-# Sets RSSI preference for 5GHz over 2.4GHz AP
-gSelect5GHzMargin=5
+
+# TheCrazyLex@PA Prefer connecting to 5Ghz AP
+# even if its RSSI is lower by 3dBm than the 2.4Ghz AP
+gRoamPrefer5GHz=1
+gSelect5GHzMargin=3
 
 # RSSI threshold offset for 2G to 5G roam
 roam_bad_rssi_thresh_offset_2g=0
