--- a/arch/arm64/configs/genom_defconfig
+++ b/arch/arm64/configs/genom_defconfig
@@ -553,7 +553,6 @@ CONFIG_USB_CONFIGFS_F_CDEV=y
 CONFIG_USB_CONFIGFS_F_CCID=y
 CONFIG_USB_CONFIGFS_F_GSI=y
 CONFIG_USB_CONFIGFS_F_QDSS=y
-CONFIG_USB_PD_POLICY=y
 CONFIG_QPNP_USB_PDPHY=y
 CONFIG_MMC=y
 CONFIG_MMC_PERF_PROFILING=y
@@ -584,6 +583,7 @@ CONFIG_STAGING=y
 CONFIG_ASHMEM=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 CONFIG_ION=y
+CONFIG_TYPEC_TCPM=y
 CONFIG_QCA_CLD_WLAN=y
 CONFIG_QCOM_GENI_SE=y
 CONFIG_QPNP_REVID=y
