--- a/arch/arm64/configs/genom_defconfig
+++ b/arch/arm64/configs/genom_defconfig
@@ -223,6 +223,7 @@ CONFIG_NET_SCHED=y
 CONFIG_NET_SCH_HTB=y
 CONFIG_NET_SCH_PRIO=y
 CONFIG_NET_SCH_MULTIQ=y
+CONFIG_NET_SCH_NETEM=y
 CONFIG_NET_SCH_FQ_CODEL=y
 CONFIG_NET_SCH_INGRESS=y
 CONFIG_NET_SCH_DEFAULT=y
