qcacld-3.0: Decouple panic call with SLUB_DEBUG
Decouple kernel panic calls in WLAN module with CONFIG_SLUB_DEBUG
feature flag. Added a new config item, CONFIG_PANIC_ON_WLAN_QDF_BUG
which is set to 1 by default. PANIC_ON_BUG is enabled only if
CONFIG_SLUB_DEBUG & CONFIG_PANIC_ON_WLAN_QDF_BUG is enabled.

Bug: 133181330
Test: Turn on WLAN and play youtube videos

Change-Id: I31b4e25e742551dbe438822ec983e7ac9c1e663a
Signed-off-by: UtsavBalar1231 <utsavbalar1231@gmail.com>

--- a/drivers/staging/qcacld-3.0/configs/default_defconfig
+++ b/drivers/staging/qcacld-3.0/configs/default_defconfig
@@ -327,13 +327,10 @@ CONFIG_FEATURE_FW_LOG_PARSING := n
 CONFIG_DP_TRACE := n
 
 ifeq ($(CONFIG_SLUB_DEBUG), y)
-	PANIC_ON_BUG := y
 	WLAN_WARN_ON_ASSERT := y
 else ifeq ($(CONFIG_PERF_DEBUG), y)
-	PANIC_ON_BUG := y
 	WLAN_WARN_ON_ASSERT := y
 else
-	PANIC_ON_BUG := n
 	WLAN_WARN_ON_ASSERT := n
 endif
 
@@ -639,3 +636,13 @@ CONFIG_WLAN_FEATURE_PKT_CAPTURE := y
 endif
 
 CONFIG_WLAN_HANG_EVENT := y
+
+#Flag to enable/disable kernel panic calls
+CONFIG_PANIC_ON_WLAN_QDF_BUG=y
+PANIC_ON_BUG := n
+
+ifeq ($(CONFIG_SLUB_DEBUG), y)
+	ifeq ($(CONFIG_PANIC_ON_WLAN_QDF_BUG), y)
+		PANIC_ON_BUG := y
+	endif
+endif
