--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -1296,4 +1296,12 @@ config TOUCHSCREEN_RAYDIUM_CHIPSET
 
 	  If unsure, say N.
 
+config TOUCHSCREEN_XIAOMI_C3J
+	bool "touchscreen for xiaomi c3j project"
+	depends on SPI
+	default n
+	help
+	  Say Y here if you have a Xiaomi C3J touchscreen and want to enable
+	  support for the built-in touchscreen.
+
 endif
