circleci: Use clang 10
Signed-off-by: Rama Bondan Prakoso <ramanarubp@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: rama982/dokar:latest
+      - image: rama982/dokar:clang10
     steps:
       - checkout
       - run: sh -c "$(curl -sSL https://github.com/rama982/scripts/raw/master/build_on_docker.sh)"
