Revert "ARM64/configs: ginkgo: Use simple low memory killer"
This reverts commit bc5279ed2ee1ac77def7ca97a7ad384f1c0abf10.

Signed-off-by: Rama Bondan Prakoso <ramanarubp@gmail.com>

--- a/arch/arm64/configs/genom_defconfig
+++ b/arch/arm64/configs/genom_defconfig
@@ -16,6 +16,8 @@ CONFIG_IKCONFIG=y
 CONFIG_IKCONFIG_PROC=y
 CONFIG_LOG_BUF_SHIFT=20
 CONFIG_CGROUPS=y
+CONFIG_MEMCG=y
+CONFIG_MEMCG_SWAP=y
 CONFIG_BLK_CGROUP=y
 CONFIG_CGROUP_SCHED=y
 CONFIG_RT_GROUP_SCHED=y
@@ -501,6 +503,7 @@ CONFIG_UIO=y
 CONFIG_UIO_MSM_SHAREDMEM=y
 CONFIG_STAGING=y
 CONFIG_ASHMEM=y
+CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 CONFIG_ION=y
 CONFIG_TYPEC_TCPM=y
 CONFIG_QCA_CLD_WLAN=y
@@ -606,8 +609,6 @@ CONFIG_QTI_MPM=y
 CONFIG_RAS=y
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
-CONFIG_ANDROID_SIMPLE_LMK=y
-CONFIG_ANDROID_SIMPLE_LMK_TIMEOUT_MSEC=100
 CONFIG_QCOM_QFPROM=y
 CONFIG_NVMEM_SPMI_SDAM=y
 CONFIG_SENSORS_SSC=y
