--- a/arch/arm64/configs/genom_defconfig
+++ b/arch/arm64/configs/genom_defconfig
@@ -569,6 +569,7 @@ CONFIG_STAGING=y
 CONFIG_ASHMEM=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 CONFIG_ION=y
+CONFIG_ION_POOL_AUTO_REFILL=y
 CONFIG_TYPEC_TCPM=y
 CONFIG_QCA_CLD_WLAN=y
 CONFIG_QCOM_GENI_SE=y
