circleci: Use ubuntu dokar
Signed-off-by: Rama Bondan Prakoso <ramanarubp@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: rama982/dokar:latest
+      - image: rama982/dokar:ubuntu
     steps:
       - run: git clone --depth 1 "https://github.com/Genom-Project/android_kernel_xiaomi_ginkgo" --branch "$CIRCLE_BRANCH" .
-      - run: sh -c "$(curl -sSL https://github.com/rama982/scripts/raw/master/build_on_docker.sh)"
+      - run: bash -c "$(curl -sSL https://github.com/rama982/scripts/raw/master/build_on_docker.sh)"
